--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
     <h4 id="i "> intoducation your selif  </h4>
     <p> this is shaive. i work for to html and css progarmming sector.  </p>
+
+
+    <div class="v">
+        <h3 id="news"> welocom to my world </h3>
+        <p>Bangladesh News: Collection (list) of all online Bangla Newspaper and Bengali News Agency. Find 24x7 latest Bangla News Updates from Most popular BD Newspapers - 24 Live News, BD News 24, Bangla News 24 and rest of all continuously updated Bangla News sites.Bangla News Papers: Newspaper is a good source of knowledge. We can learn a lot and stay updated with the worlds latest update and status via bangla newspaper. There are over 1000+ Newspaper published daily from Bangladesh. Most of them is from the capital of bangladesh, Dhaka. Prothom-alo is the most popular Bangla daily newspaper. Bangladesh Pratidin is the highest Circulated Newspaper from bangladesh. And the price is only 5tk. Though prothom alo offer a paid package for their online epaper version, Bangladesh pratidin, kalerkontho, jugantor, manab zamin and many other Newspaper offer epaper to read free in online. Kaler Kantho is another popular News Paper in Bangladesh. This bengali Newspaper is also very active in their online portal. Jugantor is One Of prominent Bengali News Portal Published from Dhaka. All Bangla Newspaper, Bd News Offer the largest List [collection] Of bdnews [Bengali Newspapers]. Read All Bangladeshi Newspaper In one place with allbanglanewspapers.</p>
+    </div>
 </div>
 </body>
 </html>
