--- a/home.html
+++ b/home.html
@@ -18,5 +18,8 @@
     <div class="k">
         <h2> Redowanul Bury Chodhurary </h2>
     </div>
+    <div class="e">
+        <img src="pexels-nastiz-12604241.jpg" alt="">
+    </div>
 </body>
 </html>
